# scmora-db

./: .gitignore  LICENSE  MANIFEST.in  README.md  metadata.original.csv  metadata_summary.json  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/scmora_db/: __init__.py  catalog.py  cli.py  download.py  exceptions.py  io.py  metadata.csv
tests/: test_catalog.py  test_cli.py  test_download.py
